--- a/app/src/main/res/layout/activity_restaurant.xml
+++ b/app/src/main/res/layout/activity_restaurant.xml
@@ -19,10 +19,10 @@
 
     <TextView
         android:id="@+id/descriptionview"
-        android:layout_width="104dp"
-        android:layout_height="21dp"
+        android:layout_width="75dp"
+        android:layout_height="37dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:text="TextView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -34,7 +34,7 @@
         android:id="@+id/phoneview"
         android:layout_width="wrap_content"
         android:layout_height="18dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:text="TextView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -109,8 +109,6 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:text="Description : "
-        app:layout_constraintEnd_toStartOf="@+id/descriptionview"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/nameview" />
 
@@ -118,12 +116,9 @@
         android:id="@+id/textView13"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:text="Phone : "
-        app:layout_constraintEnd_toStartOf="@+id/phoneview"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView12" />
 
@@ -134,8 +129,6 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:text="City : "
-        app:layout_constraintEnd_toStartOf="@+id/localisationview"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView13" />
 
@@ -146,8 +139,6 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:text="Open Time :"
-        app:layout_constraintEnd_toStartOf="@+id/opentimeview"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView14" />
 
@@ -158,8 +149,6 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:text="Close time :"
-        app:layout_constraintEnd_toStartOf="@+id/closetimeview"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView15" />
 
@@ -170,8 +159,6 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:text="Rate : "
-        app:layout_constraintEnd_toStartOf="@+id/rateview"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView16" />
 
@@ -182,8 +169,37 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:text="id"
-        app:layout_constraintEnd_toStartOf="@+id/idview"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView17" />
+
+    <Button
+        android:id="@+id/postcomment"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="8dp"
+        android:onClick="PostComment"
+        android:text="postcomment"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <Button
+        android:id="@+id/seecomments"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="8dp"
+        android:text="see comments"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/postcomment" />
+
+    <Button
+        android:id="@+id/menu"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="8dp"
+        android:text="Menu"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/seecomments" />
 </android.support.constraint.ConstraintLayout>
